--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,17 @@
 default: &default
   adapter: postgresql
   encoding: utf8
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') %>
   url: <%= ENV['DATABASE_URL'] %>
-  pool: 5
 
 development:
   <<: *default
+  database: healthtree_development_live
+
 test:
   <<: *default
+  database: healthtree_test
+
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
