--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -362,7 +362,7 @@ RSpec/SubjectStub:
 RSpec/VerifiedDoubles:
   Enabled: false # TODO: fix
 
-Naming/AccessorMethodName:
+Style/AccessorMethodName:
   Enabled: false # TODO: fix
 Style/AndOr:
   Enabled: false # TODO: fix
@@ -410,7 +410,7 @@ Style/MethodMissingSuper:
   Enabled: false # TODO: fix
 Style/MissingRespondToMissing:
   Enabled: false # TODO: fix
-Naming/MethodName:
+Style/MethodName:
   Enabled: false # TODO: fix
 Style/ModuleFunction:
   Enabled: false
@@ -439,7 +439,7 @@ Style/PercentLiteralDelimiters:
     '%W': '()'
 Style/PerlBackrefs:
   Enabled: false # TODO: fix
-Naming/PredicateName:
+Style/PredicateName:
   Enabled: false # TODO: fix
 Style/RedundantSelf:
   Enabled: false # TODO: fix
@@ -464,7 +464,7 @@ Style/SymbolArray:
   Enabled: true
 Style/UnneededInterpolation:
   Enabled: false # TODO: fix
-Naming/VariableNumber:
+Style/VariableNumber:
   EnforcedStyle: normalcase
 Style/WhileUntilDo:
   Enabled: false # TODO: fix
